[package]
name = "garnish-viewer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0.196" , features = ["derive"] }
serde_json = "1.0"
garnish_annotations_collector = { path = "../garnish-annotations-collector" }
garnish_utils = { path = "../garnish-utils"}
serde_garnish = { path = "../serde-garnish" }
garnish_lang_runtime = { path = "../garnish-core/runtime"}
garnish_lang_compiler = { path = "../garnish-core/compiler", features = ["serde"]}
garnish_data = { path = "../garnish-core/data"}
garnish_traits = { path = "../garnish-core/traits"}
log = "0.4.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
